@@ -74,6 +74,10 @@ public class ShrinesLootTables {
 	public static final ResourceLocation WATER_SHRINE = new ResourceLocation("shrines:chests/water_shrine");
 	public static final ResourceLocation BEES = new ResourceLocation("shrines:chests/bees");
 	public static final ResourceLocation BALLON = new ResourceLocation("shrines:chests/ballon");
+	public static final ResourceLocation GUARDIAN_MEETING = new ResourceLocation("shrines:chests/guardian_meeting");
+
+	
+   
 
 	private static ResourceLocation register(String id, boolean isNetherChest, boolean isVillageChest) {
 		return register(new ResourceLocation(id), isNetherChest, isVillageChest);
