@@ -1,0 +1,59 @@
+package com.silverminer.shrines.structures.guardian_meeting;
+
+import com.mojang.serialization.Codec;
+import com.silverminer.shrines.config.Config;
+import com.silverminer.shrines.config.StructureConfig.StructureGenConfig;
+import com.silverminer.shrines.structures.AbstractStructure;
+import com.silverminer.shrines.structures.AbstractStructureStart;
+
+import net.minecraft.util.Rotation;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.MutableBoundingBox;
+import net.minecraft.util.registry.DynamicRegistries;
+import net.minecraft.world.biome.Biome;
+import net.minecraft.world.gen.ChunkGenerator;
+import net.minecraft.world.gen.GenerationStage;
+import net.minecraft.world.gen.feature.NoFeatureConfig;
+import net.minecraft.world.gen.feature.structure.Structure;
+import net.minecraft.world.gen.feature.template.TemplateManager;
+
+public class GuardianMeetingStructure extends AbstractStructure<NoFeatureConfig> {
+
+	public GuardianMeetingStructure(Codec<NoFeatureConfig> codec) {
+		super(codec, 3, "guardian_meeting");
+	}
+
+	@Override
+	public GenerationStage.Decoration getDecorationStage() {
+		return GenerationStage.Decoration.SURFACE_STRUCTURES;
+	}
+
+	@Override
+	public Structure.IStartFactory<NoFeatureConfig> getStartFactory() {
+		return GuardianMeetingStructure.Start::new;
+	}
+
+	@Override
+	public StructureGenConfig getConfig() {
+		return Config.STRUCTURES.GUARDIAN_MEETING;
+	}
+
+	public static class Start extends AbstractStructureStart<NoFeatureConfig> {
+
+		public Start(Structure<NoFeatureConfig> structure, int chunkX, int chunkZ, MutableBoundingBox boundingbox,
+				int p_i225806_5_, long seed) {
+			super(structure, chunkX, chunkZ, boundingbox, p_i225806_5_, seed);
+		}
+
+		@Override
+		public void func_230364_a_(DynamicRegistries registries, ChunkGenerator chunkGenerator,
+				TemplateManager templateManager, int chunkX, int chunkZ, Biome biome, NoFeatureConfig config) {
+			int i = chunkX * 16;
+			int j = chunkZ * 16;
+			BlockPos blockpos = new BlockPos(i, 0, j);
+			Rotation rotation = Rotation.randomRotation(this.rand);
+			GuardianMeetingPiece.generate(templateManager, blockpos, rotation, this.components, this.rand);
+			this.recalculateStructureSize();
+		}
+	}
+}
